--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-De Spatzibär liebt dech ganz fescht.
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boss Quant Solutions</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <img src="logo.svg" alt="Boss Quant Solutions Logo" class="logo">
+        <h1 class="company-name">Boss Quant Solutions</h1>
+    </div>
+</body>
+</html>
